--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,5 +7,14 @@
   "LOGIN" : "Login",
   "LOG_OUT" : "Log out",
   "ACCOUNT_INFORMATION" : "Account Information",
-  "SETTING" : "Setting"
+  "SETTING" : "Setting",
+  "ADD_NEW" : "Add New",
+  "FULL_NAME" : "Fullname",
+  "USER_NAME" : "Username",
+  "PHONE_NUMBER" : "Phone Number",
+  "ROLES" : "Roles",
+  "STATUS" : "Status",
+
+  "PASSWORD" : "Password",
+  "ADD_NEW_USER_LABEL" : "Add New User"
 }
