--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -7,5 +7,13 @@
   "LOGIN" : "Đăng nhập",
   "LOG_OUT" : "Đăng xuất",
   "ACCOUNT_INFORMATION" : "Thông tin tài khoản",
-  "SETTING" : "Cài đặt"
+  "SETTING" : "Cài đặt",
+  "ADD_NEW" : "Thêm mới",
+  "FULL_NAME" : "Họ và tên",
+  "USER_NAME" : "Tên đăng nhập",
+  "PHONE_NUMBER" : "Số điện thoại",
+  "ROLES" : "Vai trò",
+  "STATUS" : "Trạng thái",
+  "PASSWORD" : "Mật khẩu",
+  "ADD_NEW_USER_LABEL" : "Thêm mới Người Dùng"
 }
